# mstrio-py

./: .gitignore  .travis.yml  AdminStuff.ipynb  AllowedSpaces.ipynb  CODEOWNERS  CustomCellsPreRefactor.ipynb  CustomJupCell_Reopening.ipynb  CustomNamespaceTesting.ipynb  DataModeling.ipynb  LICENSE  MANIFEST.in  NEWS.md  README.md  USAGE.md  __init__.py  build.sh  check_python_version.sh  integration_tests.sh  pyproject-backend.toml  pyproject.toml  requirements-backend.in  requirements-backend.txt  requirements.txt  setup.cfg  setup.py  unittest.sh
MicroStrategy World 2021 demos/: Create Subscription.ipynb  Disable Inactive Users.ipynb  Indirect user groups.ipynb  MicroStrategy World 2021 - Python for Automation.ipynb  Narrowcast migration.ipynb  Sandbox Project.ipynb  Top 10 Automated Administrator Tasks.ipynb
admin_demo_scripts/: add_email_to_new_users.py  cache_update_subscription.py  contact_group_mgmt.py  contact_mgmt.py  create_new_hired_users.py  delete_addresses_from_departed_users.py  delete_inactive_cube_caches.py  delete_subscriptions_of_departed_users.py  device_mgmt.py  disable_departed_users.py  job_monitors.py  list_active_user_privileges.py  list_dependents.py  list_empty_user_groups.py  list_security_roles_per_user.py  object_mgmt.py  schema_mgmt.py  scripts_helper.py  transmitter_mgmt.py  user_hierarchy_mgmt.py
code_snippets/: acl_mgmt.py  agents.py  ai_dataset_collection.py  applications.py  attributes.py  bots.py  change_journal_mgmt.py  config_mgmt.py  connect.py  contact_group_mgmt.py  contacts.py  content_cache.py  content_groups.py  create_super_cube.py  cube_cache.py  cube_report.py  custom_groups.py  dashboard.py  data_models.py  datasource_mgmt.py  device_mgmt.py  document.py  documentation.py  dossier.py  dynamic_recipient_list.py  events.py  fact.py  fences.py  filter.py  history_list.py  incremental_refresh_report.py  intelligent_cube.py  job_monitor.py  languages.py  ldap_batch_import.py  library.py  license_mgmt.py  lock.py  logging.py  metrics.py  (+37 more)
connector-jupyter/: .ecosystem  .eslintrc.js  .gitignore  __init__.py  package-lock.json  package.json  readme.md
datasource-workflows/: create_python_script_datasource.py
demos/: Access Control List and Permission.ipynb  Admin Modules Presentation.ipynb  Application and Environment.ipynb  Cluster.ipynb  Library Management.ipynb  Security Roles and Privileges.ipynb  Subscriptions&Schedules.ipynb  User.ipynb  UserConnections.ipynb  UserGroup.ipynb  VLDB Settings.ipynb
docs/: pull_request_template.md
examples/: application_mgmt.py  connect.py  contact_group_mgmt.py  contacts.py  create_dataset.py  create_super_cube.py  cube_cache.py  cube_report.py  datasource_mgmt.py  device_mgmt.py  events.py  intelligent_cube.py  job_monitor.py  migration.py  object_mgmt.py  project_mgmt.py  schedules.py  schema_mgmt.py  security_filters.py  server_mgmt.py  subscription_mgmt.py  transmitter_mgmt.py  user_hierarchy_mgmt.py  user_library.py  user_mgmt.py
mstrio/: __init__.py  browsing.py  config.py  connection.py  cube.py  dataset.py  helpers.py  library.py  microstrategy.py  report.py  types.py
script-templates/: README.md  admin_task_batch_ldap_import.py  admin_task_clear_history_list.py  admin_task_garbage_collect.py  admin_task_load_om_tables.py  data_source_script.py  data_source_script_all_users.py  flow_step_create_migration.py  flow_step_dsnless_conversion.py  flow_step_execute_migration.py  flow_step_file_access_aws_s3.py  flow_step_file_access_ftp.py  flow_step_postresql_dsnless_query.py  flow_step_project_duplicate.py  flow_step_project_merge.py  flow_step_send_email.py  flow_step_sql_query.py  flow_step_tc_create_baseline_test.py  flow_step_tc_create_comparison_test.py  flow_step_tc_execute_baseline_test.py  flow_step_tc_execute_comparison_test.py  psycopg2_all_actions_template.py  psycopg2_delete_template.py  psycopg2_insert_template.py  psycopg2_update_template.py  rally_all_actions_template.py  rally_delete_template.py  rally_insert_template.py  rally_update_template.py  return_from_standard_script.py  script_aggregation_function_template.py  script_relative_function_template.py  script_simple_function_template.py  transaction_edit_users.py
sphinx/: conf.py  create_docs.py  index.rst  upload_doc.sh
tests/: .gitignore  README.md  generate_api_responses.py  mock_connection.py  mock_cube.py  mock_report.py  run_tests.py  test_connection.py  test_cube.py  test_dataset.py  test_microstrategy.py  test_report.py
workflows/: add_email_to_new_users.py  application_end_to_end_showcase.py  assign_ACLs_for_objects.py  bulk_delete_users.py  compare_advanced_properties.py  control_users_and_security.py  create_bursting_subscription.py  create_content_group_and_application.py  create_mobile_subscription.py  create_prompted_subscription.py  delete_addresses_from_departed_users.py  delete_inactive_cube_caches.py  delete_subscriptions_of_departed_users.py  disable_all_active_agents.py  disable_all_active_bots.py  disable_inactive_users.py  duplicate_project.py  duplicate_user_subscriptions.py  export_and_import_translations_to_database.py  export_selected_information_to_csv.py  get_all_columns_in_table.py  get_subscriptions_by_emails.py  import_cube_data_into_dataframe.py  import_report_data_into_dataframe.py  importing_usergroups_user_group_structure_from_csv.py  list_active_user_privileges.py  list_empty_user_groups.py  list_security_roles_per_user.py  manage_active_and_inactive_users.py  manage_pre_post_execution.py  manage_project_languages.py  manage_project_settings.py  manage_subscriptions.py  manage_translation_for_metric.py  migrate_active_users.py  migrate_last_modified_objects.py  migrate_user_contacts_and_addresses.py  script_usage_types.json  send_dashboard_email_subscription_after_cube_refresh.py  test_all_datasources.py  (+1 more)
workstation_demo_scripts/: add_email_to_new_users.py  cache_update_subscription.py  delete_addresses_from_departed_users.py  delete_inactive_cube_caches.py  delete_subscriptions_of_departed_users.py  job_monitors.py  list_active_user_privileges.py  object_mgmt.py  (+2 more)
(+636 files in other folders)
