[build-system]
requires = ["hatchling >= 1.14.0", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mstrio/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/code_snippets",
    "/script-templates",
    "/mstrio",
    "/workflows",
    "/NEWS.md",
    "/README.md",
    "/USAGE.md",
    "/setup.cfg",
]

[tool.hatch.build.targets.wheel]
packages = ["mstrio"]

[project]
name = "mstrio-py"
description = "Python interface for the Strategy One REST API"
authors = [{ name = "Strategy One", email = "bkaczynski@strategy.com" }]
requires-python = ">=3.10,<3.14"
license = { text = "Apache License 2.0" }
readme = "README.md"
dynamic = ["version"]

classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

# when changing this section, make sure to update `[strict]` deps below
dependencies = [
    "packaging >= 23",
    # FYI: <https://github.com/pandas-dev/pandas/blob/fa5c2550e81c3e745eb7948b56adac45454853d5/pyproject.toml#L60>
    "pandas[output-formatting,pyarrow] >= 1.1.5",
    "pyhumps >= 3.8",
    "pypika >= 0.48.9",
    "requests >= 2.32.3",
    "requests-futures >= 1.0.0",
    "stringcase >= 1.2",
    "tqdm >= 4.66.4",
]

[project.optional-dependencies]
# if there's setup issues, install mstrio-py with `pip install mstrio-py[strict]`
# and check if the issues are gone.
# essentially this installs all the deps and peer deps
# without "dependencies optimizations"
strict = [
    "jinja2 >= 3.1.5",
    "numpy >= 2",
    "packaging >= 24",
    "pandas[output-formatting,pyarrow] >= 2",
    "pyarrow >= 19",
    "pyhumps >= 3.8",
    "pypika >= 0.48.9",
    "requests >= 2.32.3",
    "requests-futures >= 1",
    "stringcase >= 1.2",
    "tox >= 4.23.2",
    "tqdm >= 4.66.4",
    "urllib3 >= 2",
]
dev = [
    "flake8 == 7.0.0",
    "mypy == 1.10.0",
    "yapf == 0.40.2",
    "nose == 1.3.7",
    "coverage == 7.3.4",
    "pytest == 8.2.0",
    "pytest-cov == 4.1.0",
    "isort == 5.13.2",
    "pre-commit == 3.7.1",
    "flaky == 3.8.1",
    "python-decouple == 3.8",
    "black == 24.4.2",
    "flake8-black == 0.3.6",
    "tox == 4.23.2",          # if you change this version, update Dockerfile as well
]

[project.urls]
"Bug Tracker" = "https://github.com/MicroStrategy/mstrio-py/issues"
"Documentation" = "https://www2.microstrategy.com/producthelp/Current/mstrio-py/"
"Source Code" = "https://github.com/MicroStrategy/mstrio-py"
"Quick Manual" = "https://www2.microstrategy.com/producthelp/current/FederatedAnalytics/en-us/Content/mstr_for_jupyter.htm"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
strict_optional = false
show_error_codes = true
color_output = true

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["mstrio/api/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def _",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = ["mstrio/api/*", "mstrio/utils/datasources.py"]
show_missing = true


[tool.black]
target-version = ["py310"]
skip-string-normalization = true
extend-exclude = '''
/(
    | __pycache__
    | code_snippets
    | script-templates
    | workflows
    | validation_scripts
    | .tox
)/
'''
