[metadata]
license_files = LICENSE

[flake8]
ignore = W503
max-line-length = 99
max-doc-length = 80
exclude =
    __pycache__
    demos
    connector-jupyter
    admin_demo_scripts
    workstation_demo_scripts
    examples

[yapf]
based_on_style = google
column_limit = 99
spaces_before_comment = 2
split_before_named_assigns = false
split_before_first_argument = false
split_before_logical_operator = true
SPLIT_BEFORE_ARITHMETIC_OPERATOR = true
SPLIT_BEFORE_DOT = true
SPLIT_COMPLEX_COMPREHENSION = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
ALLOW_MULTILINE_DICTIONARY_KEYS = true

[mypy]
python_version = 3.9
warn_unused_configs = true
strict_optional = false
show_error_codes = true
color_output = true

[isort]
line_length = 99
multi_line_output = 5
force_sort_within_sections = true
# Google style
lexicographical = true
order_by_type = false
group_by_package = true

[coverage:run]
omit = mstrio/api/*
relative_files = true

[coverage:report]
exclude_lines =
    pragma: no cover
    def _
    if TYPE_CHECKING:
    raise NotImplementedError
omit =
    mstrio/api/*
    mstrio/utils/datasources.py
show_missing = True
