[metadata]
license_files = LICENSE

[flake8]
no-accept-encodings = true
max-line-length = 88
max-doc-length = 80
black-config = pyproject.toml
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    __pycache__
    validation_scripts
    connector-jupyter
    workflows
    code_snippets
    .tox

[mypy]
python_version = 3.10
warn_unused_configs = true
strict_optional = false
show_error_codes = true
color_output = true

[isort]
profile = black

[coverage:run]
omit = mstrio/api/*
relative_files = true

[coverage:report]
exclude_lines =
    pragma: no cover
    def _
    if TYPE_CHECKING:
    raise NotImplementedError
omit =
    mstrio/api/*
    mstrio/utils/datasources.py
show_missing = True
